[project]
name = "whisper-mlx-api"
version = "1.0.0"
description = "MLX Whisper API Server for Apple Silicon"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "mlx-whisper>=0.4.3",
    "yt-dlp>=2024.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
